--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: go
 go:
-  - "1.8"
+- '1.8'
+before_install:
+- openssl aes-256-cbc -K $encrypted_cbb04a6befb3_key -iv $encrypted_cbb04a6befb3_iv
+  -in gae-service-account.json.enc -out gae-service-account.json -d
+deploy:
+  provider: gae
+  keyfile: gae-service-account.json
+  project: personal-website
