--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ go:
 before_install:
 - openssl aes-256-cbc -K $encrypted_cbb04a6befb3_key -iv $encrypted_cbb04a6befb3_iv
   -in gae-service-account.json.enc -out gae-service-account.json -d
+- go get github.com/mattn/goveralls
+script:
+- $GOPATH/bin/goveralls -service=travis-ci
 deploy:
   provider: gae
   keyfile: gae-service-account.json
