--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 runtime: go115
 handlers:
 - url: /.*
-  script: _go_app
+  script: auto
 instance_class: F1
 automatic_scaling:
   min_idle_instances: 1
