--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,10 @@ jobs:
         with:
           go-version: ~1.15.0
 
-      - run: go test ./server
+      - run: go test -json ./server > test.json
+
+      - if: always()
+        uses: guyarb/golang-test-annotations@v0
 
       - uses: google-github-actions/deploy-appengine@main
         with:
